--- a/Hello_World.ipynb
+++ b/Hello_World.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODT5eLZCmREuKtzR9xaQ0k",
+      "authorship_tag": "ABX9TyNsXMOBKVDf4XXbQKNB1hom",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,6 +58,31 @@
       "source": [
         "x='Hello World'\n",
         "print(x)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = input(\"Enter what you would like to print?\")\n",
+        "print(name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eeC73bh6-xbk",
+        "outputId": "9c7fe43e-4536-4010-83e2-b52fed632a2e"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter what you would like to print?Nilisha\n",
+            "Nilisha\n"
+          ]
+        }
       ]
     }
   ]
